--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS grids intro</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Grids with specific positioning</h1>
+    <div class="container-1">
+      <div class="item-a">Item A</div>
+      <div class="item-b">Item B</div>
+      <div class="item-c">Item C</div>
+    </div>
 
-    </head>
-    <body>
-        
-        
-    </body>
+    <h1>Grids without specific positioning</h1>
+    <div class="container-2">
+      <div class="box1">Box 1</div>
+      <div class="box2">Box 2</div>
+      <div class="box3">Box 3</div>
+
+      <div class="box4">Box 4</div>
+      <div class="box5">Box 5</div>
+      <div class="box6">Box 6</div>
+
+      <div class="box7">Box 7</div>
+      <div class="box8">Box 8</div>
+      <div class="box9">Box 9</div>
+    </div>
+
+    <h1>Grids areas</h1>
+    <div class="container-3">
+      <header>Header</header>
+      <main>Content</main>
+      <aside>Sidebar</aside>
+      <footer>Footer</footer>
+    </div>
+  </body>
 </html>
